--- a/src/main/resources/docgen/templates/dl19-doc-segmented-unicoil-noexp-v2.template
+++ b/src/main/resources/docgen/templates/dl19-doc-segmented-unicoil-noexp-v2.template
@@ -1,14 +1,14 @@
 # Anserini Regressions: TREC 2019 Deep Learning Track (Document)
 
-**Model**: uniCOIL (with doc2query-T5 expansions) on segmented documents (segment-only encoding) - _Deprecated_, see below
+**Model**: uniCOIL (without any expansions) on segmented documents (title/segment encoding)
 
-This page describes regression experiments, integrated into Anserini's regression testing framework, using uniCOIL (with doc2query-T5 expansions) on the [TREC 2019 Deep Learning Track document ranking task](https://trec.nist.gov/data/deep2019.html).
+This page describes regression experiments, integrated into Anserini's regression testing framework, using uniCOIL (without any expansions) on the [TREC 2019 Deep Learning Track document ranking task](https://trec.nist.gov/data/deep2019.html).
 The uniCOIL model is described in the following paper:
 
 > Jimmy Lin and Xueguang Ma. [A Few Brief Notes on DeepImpact, COIL, and a Conceptual Framework for Information Retrieval Techniques.](https://arxiv.org/abs/2106.14807) _arXiv:2106.14807_.
 
 The experiments on this page are not actually reported in the paper.
-However, the model is the same, applied to the MS MARCO _segmented_ document corpus (with doc2query-T5 expansions).
+However, the model is the same, applied to the MS MARCO _segmented_ document corpus (without any expansions).
 Retrieval uses MaxP technique, where we select the score of the highest-scoring passage from a document as the score for that document to produce a document ranking.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
