--- a/src/main/resources/docgen/templates/msmarco-doc-segmented-unicoil-v2.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-segmented-unicoil-v2.template
@@ -1,15 +1,20 @@
 # Anserini Regressions: MS MARCO Document Ranking
 
-**Model**: uniCOIL (without any expansions) on segmented documents (segment-only encoding) - _Deprecated_, see below
+**Model**: uniCOIL (with doc2query-T5 expansions) on segmented documents (title/segment encoding)
 
-This page describes regression experiments, integrated into Anserini's regression testing framework, using uniCOIL (without any expansions) on the [MS MARCO document ranking task](https://github.com/microsoft/MSMARCO-Document-Ranking).
+This page describes regression experiments, integrated into Anserini's regression testing framework, using uniCOIL (with doc2query-T5 expansions) on the [MS MARCO document ranking task](https://github.com/microsoft/MSMARCO-Document-Ranking).
 The uniCOIL model is described in the following paper:
 
 > Jimmy Lin and Xueguang Ma. [A Few Brief Notes on DeepImpact, COIL, and a Conceptual Framework for Information Retrieval Techniques.](https://arxiv.org/abs/2106.14807) _arXiv:2106.14807_.
 
 The experiments on this page are not actually reported in the paper.
-However, the model is the same, applied to the MS MARCO _segmented_ document corpus (without any expansions).
+However, the model is the same, applied to the MS MARCO _segmented_ document corpus (with doc2query-T5 expansions).
 Retrieval uses MaxP technique, where we select the score of the highest-scoring passage from a document as the score for that document to produce a document ranking.
+
+**NOTE**: As an important detail, there is the question of what text we feed into the encoder to generate document representations.
+Initially, we fed only the segment text, but later we tried prepending the title of the document.
+This regression captures the latter title/segment encoding, which for clarity we call v2, distinguished from segment-only encoding, which is documented [here](regressions-msmarco-doc-segmented-unicoil.md).
+This configuration is preferred, and the segment-only encoding should be considered deprecated.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead and then run `bin/build.sh` to rebuild the documentation.
@@ -29,12 +34,12 @@ For details on how to train uniCOIL and perform inference, please see [this guid
 Download the corpus and unpack into `collections/`:
 
 ```
-wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco-doc-segmented-unicoil.tar -P collections/
+wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco-doc-segmented-unicoil-v2.tar -P collections/
 
-tar xvf collections/msmarco-doc-segmented-unicoil.tar -C collections/
+tar xvf collections/msmarco-doc-segmented-unicoil-v2.tar -C collections/
 ```
 
-To confirm, `msmarco-doc-segmented-unicoil.tar` is 18 GB and has MD5 checksum `6a00e2c0c375cb1e52c83ae5ac377ebb`.
+To confirm, `msmarco-doc-segmented-unicoil-v2.tar` is 18 GB and has MD5 checksum `3618700294e0edc59b2b3b0820e3acf9`.
 
 With the corpus downloaded, the following command will perform the complete regression, end to end, on any machine:
 
