--- a/src/main/resources/regression/beir-v1.0.0-robust04-flat.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-robust04-flat.yaml
@@ -8,9 +8,9 @@ generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 8674
-  documents (non-empty): 8673
-  total terms: 969528
+  documents: 528036
+  documents (non-empty): 528036
+  total terms: 174384263
 
 metrics:
   - metric: nDCG@10
@@ -50,8 +50,8 @@ models:
     params: -bm25 -removeQuery -hits 1000
     results:
       nDCG@10:
-        - 0.3970
+        - 0.4070
       R@100:
-        - 0.9324
+        - 0.3746
       R@1000:
-        - 0.9872
+        - 0.6345
