--- a/src/main/resources/regression/beir-v1.0.0-cqadupstack-tex-multifield.yaml
+++ b/src/main/resources/regression/beir-v1.0.0-cqadupstack-tex-multifield.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: beir-v1.0.0-climate-fever-multifield
-corpus_path: collections/beir-v1.0.0/corpus/climate-fever/
+corpus: beir-v1.0.0-cqadupstack-tex-multifield
+corpus_path: collections/beir-v1.0.0/corpus/cqadupstack-tex/
 
-index_path: indexes/lucene-index.beir-v1.0.0-climate-fever-multifield/
+index_path: indexes/lucene-index.beir-v1.0.0-cqadupstack-tex-multifield/
 collection_class: BeirMultifieldCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw -fields title
 index_stats:
-  documents: 5396163
-  documents (non-empty): 5396117
-  total terms: 310661482
+  documents: 68184
+  documents (non-empty): 68184
+  total terms: 9155404
 
 metrics:
   - metric: nDCG@10
@@ -39,10 +39,10 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "BEIR (v1.0.0): climate-fever"
+  - name: "BEIR (v1.0.0): cqadupstack-tex"
     id: test
-    path: topics.beir-v1.0.0-climate-fever.test.tsv.gz
-    qrel: qrels.beir-v1.0.0-climate-fever.test.txt
+    path: topics.beir-v1.0.0-cqadupstack-tex.test.tsv.gz
+    qrel: qrels.beir-v1.0.0-cqadupstack-tex.test.txt
 
 models:
   - name: bm25
@@ -50,8 +50,8 @@ models:
     params: -bm25 -removeQuery -hits 1000 -fields contents=1.0 title=1.0
     results:
       nDCG@10:
-        - 0.2129
+        - 0.2086
       R@100:
-        - 0.4357
+        - 0.4954
       R@1000:
-        - 0.6099
+        - 0.7222
